--- a/src/main/resources/source/front/components/page/index.html
+++ b/src/main/resources/source/front/components/page/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title>通勤车安全乘坐公众平台</title>
-    <link rel="stylesheet" href="/components/page/bind/bind.scss"/>
+    <link rel="stylesheet" href="/components/page/bind/bind.less"/>
 </head>
 <body>
     <div id="app" class="wrap" >
