--- a/src/main/resources/source/front/components/page/validate/validate.css
+++ b/src/main/resources/source/front/components/page/validate/validate.css
@@ -1,25 +1,31 @@
-@charset "UTF-8";
 .page-service {
-  height: 100%; }
-  .page-service .mui-control-content {
-    height: 100%; }
-    .page-service .mui-control-content .mui-content {
-      padding-bottom: 50px; }
-
+  height: 100%;
+}
+.page-service .mui-control-content {
+  height: 100%;
+}
+.page-service .mui-control-content .mui-content {
+  padding-bottom: 50px;
+}
 @-webkit-keyframes twinkling {
-  /*透明度由0到1*/
+  /*透锟斤拷锟斤拷锟斤拷0锟斤拷1*/
   0% {
-    background-color: yellow; }
+    background-color: yellow;
+  }
   60% {
-    background-color: #ccc; } }
+    background-color: #ccc;
+  }
+}
 @keyframes twinkling {
-  /*透明度由0到1*/
+  /*透锟斤拷锟斤拷锟斤拷0锟斤拷1*/
   0% {
-    background-color: yellow; }
+    background-color: yellow;
+  }
   60% {
-    background-color: #ccc; } }
+    background-color: #ccc;
+  }
+}
 .twinkling {
   -webkit-animation: twinkling 2s infinite ease;
-  animation: twinkling 2s infinite ease; }
-
-/*# sourceMappingURL=validate.css.map */
+  animation: twinkling 2s infinite ease;
+}
